--- a/app/views/accountbooks/aggregate.html.erb
+++ b/app/views/accountbooks/aggregate.html.erb
@@ -1,37 +1,9 @@
 <h1>Listing accountbooks</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Amount</th>
-      <th>Person</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<p><%= @this_month.strftime("%m") %>月の支払額 : <%= @amount %></p>
 
-  <tbody>
-    <% @accountbooks.each do |accountbook| %>
-      <tr>
-        <td><%= accountbook.date %></td>
-        <td><%= accountbook.amount %></td>
-        <td><%= accountbook.person %></td>
-        <td><%= accountbook.content %></td>
-        <td><%= link_to 'Show', accountbook %></td>
-        <td><%= link_to 'Ed it', edit_accountbook_path(accountbook) %></td>
-        <td><%= link_to 'Destroy', accountbook, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<%= link_to 'New Accountbook', new_accountbook_path %>
 
-<p>今月の支払額</p>
-<%= @accountbooks.sum(:amount) %> </p>
-<%= @accountbooks.group(:person).sum(:amount) %> </p>
-
-<%= button_to "今月の集計", :action => "aggregate" %>
+<td><%= link_to 'Top', accountbooks_url %></td>
 
 <br>
 
