--- a/app/views/accountbooks/aggregate.html.erb
+++ b/app/views/accountbooks/aggregate.html.erb
@@ -1,6 +1,6 @@
 <h1>ギブ　ミー　マネー</h1>
 
-<p><%= @this_month.strftime("%m") %>月の支払額 : <%= @amount %></p>
+<p><%= @this_month.strftime("%m") %>月の支払額 : <%= @amount %>円也.</p>
 
 <td><%= link_to 'Top', accountbooks_url %></td>
 
